# rust-service

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
benches/util/: my_benches.rs
proto/: rust_service.proto
src/: actor.rs  main.rs  server_impl.rs  testing.rs
src/util/: testing.rs
