[package]
name = "temp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-trait = { version = "0.1" }
coerce = { version = "0.8", features = ["full"] }
coerce-macros = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.10.0"
tracing-subscriber = "0.2"
opentelemetry-jaeger = "0.10"
opentelemetry = { version = "0.11", default-features = false, features = ["trace"] }

[[bin]]
name = "temp"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "my_benches"
path = "benches/util/my_benches.rs"
harness = false